--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         This is my first assignment on git.
-        George is my coach
+        George is my coach, This is my first time on git
     </body>
 </html>
